--- a/style.css
+++ b/style.css
@@ -11,13 +11,13 @@ h2{
 .orange-color{
     color: orange;
 }
-.flexible.container{
+.flexible-container{
     display: flex;
     margin-bottom: 100px;
 }
 .half-width{
-    width: 80%;
-    padding-left: 10%;
+    width: 50%;
+    padding-left: 2%;
 }
 .half-width img{
     width: 80%;
@@ -37,7 +37,7 @@ h2{
 .dream-big{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
-    background-position: right;
+    background-position: left;
 }
 .experience-area{
     background-image: url(images/exp-bg.png);
